--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -408,109 +408,6 @@ a {
   background-color: rgba(0, 95, 163, 0.8);
 }
 
-/* Controls */
-.controls {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-@media (max-width: 768px) {
-  .controls {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
-.controls__dots {
-  display: block;
-  font-size: 0;
-}
-@media (max-width: 768px) {
-  .controls__dots {
-    display: none;
-  }
-}
-
-.dot {
-  display: inline-block;
-  font-size: 0;
-  width: 10px;
-  height: 10px;
-  background-color: var(--white);
-  opacity: 0.4;
-  border-radius: 50%;
-  cursor: pointer;
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-.dot:not(:last-child) {
-  margin-right: 40px;
-}
-
-.dot:hover {
-  opacity: 1;
-}
-
-.dot--active {
-  opacity: 1;
-}
-
-.dot--blue {
-  background-color: var(--accent);
-}
-
-.controls__arrows {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.controls__arrow {
-  display: block;
-  width: 60px;
-  height: 60px;
-  background-color: rgba(255, 255, 255, 0.2);
-  cursor: pointer;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 11px 17px;
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  margin: 0;
-}
-@media (max-width: 768px) {
-  .controls__arrow {
-    margin: 0px 30px;
-  }
-}
-
-.controls__arrow:hover {
-  background-color: rgba(255, 255, 255, 0.4);
-}
-
-.controls__arrow--prev {
-  background-image: url("../img/arrow-prev.svg");
-}
-
-.controls__arrow--next {
-  background-image: url("../img/arrow-next.svg");
-}
-
-.controls__arrow--blue {
-  background-color: rgba(0, 95, 163, 0.2);
-}
-
-.controls__arrow--blue:hover {
-  background-color: var(--accent);
-}
-
 /* Burger */
 .burger {
   display: none;
@@ -758,7 +655,6 @@ a {
 .header {
   position: relative;
   width: 100%;
-  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -801,13 +697,11 @@ a {
   }
 }
 
-.fullscreen__slider {
-  padding: 0px 0px 120px 0px;
-}
-@media (max-width: 992px) {
-  .fullscreen__slider {
-    padding: 30px 0px 45px 0px;
-  }
+/* Для очистки потоков обтекания блоков пагинации и навигации слайдера */
+.fullscreen__slider::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 .fullscreen__button {
@@ -1096,6 +990,181 @@ a {
   display: block;
   max-width: 250px;
   max-height: 130px;
+}
+
+/* Стилизация слайдера (по стандарту элементы синие) */
+/* Обращение к слайдеру */
+/* обращение к дорожке со слайдами */
+.fullscreen__slider.owl-carousel .owl-stage-outer {
+  margin: 0px 0px 120px 0px;
+}
+@media (max-width: 992px) {
+  .fullscreen__slider.owl-carousel .owl-stage-outer {
+    margin: 0px 0px 60px 0px;
+  }
+}
+
+/* стилизация пагинации (точек) */
+/* Обращение к обёртке точек */
+.fullscreen__slider.owl-carousel .owl-dots {
+  float: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 60px;
+}
+
+/* обращение к обёртке каждой точки */
+.fullscreen__slider.owl-carousel .owl-dots .owl-dot {
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 10px;
+  height: 10px;
+  background: var(--accent);
+  opacity: 0.4;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  /* обращение к активной точке */
+  /* Ховер при наведении на точку */
+  /* Скрываем спан внутри */
+}
+.fullscreen__slider.owl-carousel .owl-dots .owl-dot:not(:last-child) {
+  margin: 0px 40px 0px 0px;
+}
+.fullscreen__slider.owl-carousel .owl-dots .owl-dot.active {
+  opacity: 1;
+}
+.fullscreen__slider.owl-carousel .owl-dots .owl-dot:hover {
+  opacity: 1;
+}
+.fullscreen__slider.owl-carousel .owl-dots .owl-dot span {
+  display: none;
+}
+
+/* Стилизация стрелок */
+/* обращение к обёртке стрелок */
+.fullscreen__slider.owl-carousel .owl-nav {
+  float: right;
+  margin: 0;
+}
+
+/* обращение к обёртке стрелки назад и вперёд */
+.fullscreen__slider.owl-carousel .owl-nav .owl-prev, .fullscreen__slider.owl-carousel .owl-nav .owl-next {
+  /* display: block; */
+  width: 60px;
+  height: 60px;
+  background: rgba(0, 95, 163, 0.2);
+  border-radius: 0;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 11px 17px;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  margin: 0;
+  /* спан внутри затирается картинками через js */
+}
+@media (max-width: 768px) {
+  .fullscreen__slider.owl-carousel .owl-nav .owl-prev, .fullscreen__slider.owl-carousel .owl-nav .owl-next {
+    margin: 0px 30px;
+  }
+}
+.fullscreen__slider.owl-carousel .owl-nav .owl-prev:hover, .fullscreen__slider.owl-carousel .owl-nav .owl-next:hover {
+  background: var(--accent);
+}
+
+/* -------------------------------------------------------------- */
+/* Стилизация слайдера */
+/* Обращение к слайдеру */
+/* обращение к дорожке со слайдами */
+.fullscreen__slider.owl-carousel .owl-stage-outer {
+  margin: 0px 0px 120px 0px;
+}
+@media (max-width: 992px) {
+  .fullscreen__slider.owl-carousel .owl-stage-outer {
+    margin: 0px 0px 60px 0px;
+  }
+}
+
+/* стилизация пагинации (точек) */
+/* Обращение к обёртке точек */
+.fullscreen__slider.owl-carousel .owl-dots {
+  float: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 60px;
+}
+
+/* обращение к обёртке каждой точки */
+.fullscreen__slider.owl-carousel .owl-dots .owl-dot {
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 10px;
+  height: 10px;
+  background: var(--white);
+  opacity: 0.4;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  /* обращение к активной точке */
+  /* Ховер при наведении на точку */
+  /* Скрываем спан внутри */
+}
+.fullscreen__slider.owl-carousel .owl-dots .owl-dot:not(:last-child) {
+  margin: 0px 40px 0px 0px;
+}
+.fullscreen__slider.owl-carousel .owl-dots .owl-dot.active {
+  opacity: 1;
+}
+.fullscreen__slider.owl-carousel .owl-dots .owl-dot:hover {
+  opacity: 1;
+}
+.fullscreen__slider.owl-carousel .owl-dots .owl-dot span {
+  display: none;
+}
+
+/* Стилизация стрелок */
+/* обращение к обёртке стрелок */
+.fullscreen__slider.owl-carousel .owl-nav {
+  float: right;
+  margin: 0;
+}
+
+/* обращение к обёртке стрелки назад и вперёд */
+.fullscreen__slider.owl-carousel .owl-nav .owl-prev, .fullscreen__slider.owl-carousel .owl-nav .owl-next {
+  /* display: block; */
+  width: 60px;
+  height: 60px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 0;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 11px 17px;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  margin: 0;
+  /* спан внутри затирается картинками через js */
+}
+@media (max-width: 768px) {
+  .fullscreen__slider.owl-carousel .owl-nav .owl-prev, .fullscreen__slider.owl-carousel .owl-nav .owl-next {
+    margin: 0px 30px;
+  }
+}
+.fullscreen__slider.owl-carousel .owl-nav .owl-prev:hover, .fullscreen__slider.owl-carousel .owl-nav .owl-next:hover {
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .reviews__subtitle {
