--- a/docs/scss/components/_header.scss
+++ b/docs/scss/components/_header.scss
@@ -1,7 +1,6 @@
 .header {
     position: relative;
     width: 100%;
-    height: 100vh;
     display: flex;
     flex-direction: column;
 }
@@ -30,11 +29,11 @@
         }
     }
 }
-.fullscreen__slider {
-    padding: 0px 0px 120px 0px;
-    @media (max-width: 992px) {
-        padding: 30px 0px 45px 0px;
-    }
+/* Для очистки потоков обтекания блоков пагинации и навигации слайдера */
+.fullscreen__slider::after {
+    content: '';
+    clear: both;
+    display: table;
 }
 .fullscreen__button {
     width: 23%;
